# rstmdb

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  config.dev-tls.yaml  config.dev.yaml  config.example.yaml  config.production.yaml  docker-compose.prod.yml  docker-compose.yml  test_commands.sh
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: docusaurus.config.ts  linkzip.json  package-lock.json  protocol.md  sidebars.ts
docs/docs/: architecture.md  cli.md  configuration.md  getting-started.md  intro.md  roadmap.md
docs/docs/api/: commands.md  events.md  instances.md  machines.md  session.md  storage.md  subscriptions.md
docs/docs/clients/: csharp.md  go.md  overview.md  python.md  rust.md  typescript.md
docs/docs/concepts/: events.md  guards.md  instances.md  state-machines.md  wal.md
docs/docs/operations/: backup-recovery.md  deployment.md  docker.md  monitoring.md  security.md
docs/docs/protocol/: errors.md  messages.md  overview.md  wire-format.md
docs/static/: CNAME
grafana/: prometheus.yml
grafana/dashboards/: README.md  rstmdb.json
rstmdb-bench/: Cargo.toml
rstmdb-bench/benches/: e2e_bench.rs  engine_bench.rs  protocol_bench.rs  wal_bench.rs
rstmdb-bench/src/: lib.rs
rstmdb-cli/: Cargo.toml  README.md
rstmdb-cli/src/: commands.rs  main.rs  repl.rs
rstmdb-client/: Cargo.toml  README.md
rstmdb-client/src/: client.rs  connection.rs  error.rs  lib.rs  stream.rs  tls.rs
rstmdb-core/: Cargo.toml  README.md
rstmdb-core/src/: definition.rs  engine.rs  error.rs  guard.rs  instance.rs  lib.rs
rstmdb-protocol/: Cargo.toml  README.md
rstmdb-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  message.rs
rstmdb-server/: Cargo.toml  README.md
rstmdb-server/src/: auth.rs  broadcast.rs  compaction.rs  config.rs  error.rs  handler.rs  lib.rs  metrics.rs  server.rs  session.rs  stream.rs  tls.rs
rstmdb-storage/: Cargo.toml  README.md
rstmdb-storage/src/: error.rs  index.rs  lib.rs  snapshot.rs  store.rs
rstmdb-wal/: Cargo.toml  README.md
rstmdb-wal/src/: entry.rs  error.rs  lib.rs  recovery.rs  segment.rs  wal.rs
scripts/: generate-dev-certs.sh  loadtest.py
specs/: architecture.md
src/: main.rs
