[package]
name = "rstmdb-cli"
description = "Command-line interface for rstmdb"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../LICENSE"
keywords = ["cli", "command-line", "database", "rstmdb"]
categories = ["command-line-utilities"]

[[bin]]
name = "rstmdb-cli"
path = "src/main.rs"

[dependencies]
rstmdb-client.workspace = true
rstmdb-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
rustyline.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
