[package]
name = "rstmdb-client"
description = "Client library for rstmdb - connection pooling, async API"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../LICENSE"
readme = "README.md"
keywords = ["client", "async", "database", "rstmdb"]
categories = ["database", "asynchronous"]

[dependencies]
rstmdb-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
pin-project-lite.workspace = true

[dev-dependencies]
tokio-test.workspace = true
