[package]
name = "rstmdb-core"
description = "State machine engine for rstmdb - definitions, transitions, guard evaluation"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../LICENSE"
readme = "README.md"
keywords = ["state-machine", "fsm", "event-sourcing", "rstmdb"]
categories = ["data-structures"]

[dependencies]
rstmdb-wal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
crc32c.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
