[package]
name = "rstmdb-protocol"
description = "Wire protocol implementation for rstmdb - framing, messages, serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["protocol", "wire-format", "serialization", "rstmdb"]
categories = ["encoding"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
crc32c.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
