[package]
name = "rstmdb-server"
description = "TCP server for rstmdb - connection handling, command dispatch, sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["server", "tcp", "database", "rstmdb"]
categories = ["database", "network-programming"]

[dependencies]
rstmdb-protocol.workspace = true
rstmdb-wal.workspace = true
rstmdb-core.workspace = true
rstmdb-storage.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
uuid.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
pin-project-lite.workspace = true
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
