[package]
name = "rstmdb-storage"
description = "Storage layer for rstmdb - snapshots, instance persistence, indexes"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../LICENSE"
keywords = ["storage", "persistence", "snapshots", "rstmdb"]
categories = ["database"]

[dependencies]
rstmdb-wal.workspace = true
rstmdb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
crc32c.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
