[package]
name = "rstmdb-wal"
description = "Write-ahead log implementation for rstmdb - durable, append-only storage"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../LICENSE"
keywords = ["wal", "write-ahead-log", "database", "durability"]
categories = ["database"]

[dependencies]
thiserror.workspace = true
bytes.workspace = true
crc32c.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
